--- a/css/stylea.css
+++ b/css/stylea.css
@@ -1,6 +1,6 @@
 
 body{
-	background-image:url("../images/grid.jpg"); 
+	background-image:url("images/grid.jpg"); 
 	font-family:"Open Sans";}
 #footer{
 	background-color: black;
